--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "gh-pages": "^6.3.0",
     "motion": "^11.17.0",
     "react": "^19.0.0",
