--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "firebase": "^11.1.0",
     "gh-pages": "^6.2.0",
     "motion": "^11.15.0",
     "react": "^18.3.1",
